# numba-passthru

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
numba_passthru/: __init__.py  numba_passthru.py
numba_passthru/test/: test_passthru.py
