[tool.poetry]
name = "numba-passthru"
version = "0.3.0"
description = "Stand-alone package for Numba passthrough types until PR 3640 has landed"
authors = ["Andreas Sodeur <andreas.sodeur@rwe.com>"]
readme = "README.md"
keywords = ["numba"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Compilers",
]
homepage = "https://github.com/asodeur/numba-passthru"

packages = [
    {include = "numba_passthru"}
]
# include = ["tox.ini"]

[tool.poetry.dependencies]
python = ">=3.6"
numba = "^0.51.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

